--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "express-jwt": "^5.3.1",
+    "form-data": "^3.0.0",
+    "formidable": "^1.2.2",
+    "graphql": "^14.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.4"
   }
 }
