--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-jwt": "^5.3.1",
@@ -19,6 +20,7 @@
     "graphql": "^14.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "mongoose": "^5.9.4"
+    "mongoose": "^5.9.4",
+    "nodemon": "^2.0.2"
   }
 }
